	Removed the eval.i-am-slave parameter.  It's still set, but automatically
		by Slave.java when it's fired up.  You don't need to set it in your
		parameter file.
	select-to-die added to the README for island models
	Both synchronous and asynchronous island models now use per-island modulo and
		start times for migration, and can use the "base" settings if the
		per-island settings are not specified.  Synchronous island models 
		now synchronize on every single generation.
	All island model examples now use $ in front of their statistics file names
		to be consistent with other examples in ECJ.
	mailbox-capacity and size parameters for islands also now have default
		parameter base values.
	Added default base versions for several parameters in InterIslandExchange
	Bug fix to SimpleBreeder to handle populations that differ in size
	Likewise for DEBreeder
	Fixed several bugs in SpatialTournamentSelection and added a new parameter
		for selecting Individuals.
	Removed the locationToIndex and indexToLocation bijections in Space
	Total rewrite of MultiPopCoevolutionaryEvaluator.  Untested.
	Bug fix to toroidal handling in Spatial1DSubpopulation
	Total rewrite of SpatialMultiPopCoevolutionaryEvaluator to be consistent
		with the new MulitPopCoevolutionaryEvaluator.
	Removed ABOUT.JDK13
	Added TournamentSelection.betterThan
	Revision of ProportionalTournamentSelection to be merged with new
		TournamentSelection facility.  Untested!
	Likewise for LexicographicTournamentSelection
	Added README about TeamBots
	VectorSpecies.setup() now checkes for a null genome size parameter
	Added name() method to GPNode, which by default calls toString().
	Deleted the ERC.ERC_PREFIX constant (which was "ERC", see next).
	Changed ERC.name() to return "ERC" by default rather than "" by default.
		Furthermore, various ERC methods no longer call ERC_PREFIX+name()
		but instead just call name()
	GPFunctionSet.nodesByName added, and hashes all nodes by name().