@@ -22,7 +22,7 @@ exch = 					ec.simple.SimpleExchanger
 breed =					ec.simple.SimpleBreeder
 eval =					ec.simple.SimpleEvaluator
 stat =					ec.simple.SimpleStatistics
-generations =				100
+generations =				1000
 quit-on-run-complete =			true
 pop = 					ec.Population
 pop.subpops =				1
